--- a/index.htm
+++ b/index.htm
@@ -9,37 +9,21 @@
         </title>
     </head>
     <body id="page-top">    
-        <nav class="navbar navbar-light navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#page-top"><img class="logo" src="assets/logo-wujek.png" alt="..." /><b>LP Partners</b></a>
+        <nav class="navbar navbar-light navbar-expand-lg fixed-top">
+            <div class="container">
+            <!-- <a class="navbar-brand" href="#page-top"><img class="logo" src="assets/logo-wujek.png" alt="..." /></a> -->
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fas fa-bars ms-1"></i>
               </button>
-              <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                  <li class="nav-item col-10"><a class="nav-link active" aria-current="page" href="#">Item 1</a></li>
+                  <li class="nav-item col-10"><a class="nav-link" href="#">Item 2</a></li>
+                  <li class="nav-item col-10"><a class="nav-link" href="#">Item 3</a></li>
                 </ul>
               </div>
             </div>
           </nav>
-
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html> 
